# raspi-cd-player

./: Cargo.toml  README.md
src/: action.rs  main.rs  output.rs  play_song.rs  read_cd.rs  state.rs
