[package]
name = "raspi-cd-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calloop = "*"
color-eyre = "*"
env_logger = "*"
flume = "*"
libcdio-sys = "*"
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"
log = "*"
smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit" }
symphonia = "0.5"
symphonia-format-wav = "0.5"
tempfile = "*"
udev = "*"
wayland-client = { git = "https://github.com/Smithay/wayland-rs" }
zbus = "*"

